# fcitx5-mcbopomofo

./: CMakeLists.txt
.github/workflows/: ci.yaml
data/: associated-phrases-v2.txt  data-plain-bpmf.txt
po/: en.po  fcitx5-mcbopomofo.pot  zh_TW.po
src/: CMakeLists.txt  DictionaryService.cpp  Fmt.h  IcuTransformInputHelper.cpp  IcuTransformInputHelper.h  InputState.h  KeyHandler.cpp  KeyHandler.h  McBopomofo.cpp  McBopomofo.h  NumberInputHelper.cpp
src/Big5Utils/: CMakeLists.txt
src/BopomofoBraille/: CMakeLists.txt
src/BopomofoBraille/include/BopomofoBraille/: BopomofoSyllable.h  BrailleType.h  Converter.h
src/BopomofoBraille/src/: BopomofoSyllable.cpp  Converter.cpp
src/BopomofoBraille/src/Tokens/: Digits.cpp  Digits.h  FullWidthPunctuation.cpp  FullWidthPunctuation.h  HalfWidthPunctuation.cpp  HalfWidthPunctuation.h  Letter.cpp  Letter.h
src/BopomofoBraille/tests/: CMakeLists.txt  test_BopomofoSyllable.cpp  test_Converter.cpp
src/ChineseNumbers/: CMakeLists.txt
src/Engine/: CMakeLists.txt  MemoryMappedFile.cpp  MemoryMappedFileTest.cpp
src/RomanNumbers/: CMakeLists.txt
